--- a/catalog.html
+++ b/catalog.html
@@ -113,7 +113,7 @@
                 position: sticky;
                 top: 64px; /* under site header */
                 z-index: 1400;
-                margin: 0 0 14px 0;
+                margin: 0 0 10px 0;
                 transition: transform 220ms ease, opacity 220ms ease;
             }
 
@@ -128,19 +128,19 @@
                 align-items: center;
                 justify-content: space-between;
                 gap: 12px;
-                padding: 12px 14px;
-                border-radius: 18px;
-                background: #0f172a;
-                color: #ffffff;
-                border: 1px solid rgba(255, 255, 255, 0.16);
-                box-shadow: 0 16px 34px rgba(15, 23, 42, 0.18);
+                padding: 0;
+                border-radius: 0;
+                background: transparent;
+                color: inherit;
+                border: 0;
+                box-shadow: none;
             }
 
             .gpu-mobile-toolbar-title {
                 font-weight: 900;
                 text-transform: uppercase;
                 letter-spacing: 0.08em;
-                font-size: 12px;
+                font-size: 13px;
                 line-height: 1;
                 white-space: nowrap;
             }
@@ -159,9 +159,9 @@
                 display: inline-flex;
                 align-items: center;
                 justify-content: center;
-                background: rgba(255, 255, 255, 0.06);
-                border: 1px solid rgba(255, 255, 255, 0.12);
-                color: #ffffff;
+                background: rgba(255, 255, 255, 0.70);
+                border: 1px solid rgba(15, 23, 42, 0.10);
+                color: #0f172a;
             }
 
             .gpu-mobile-icon-btn:active {
@@ -312,16 +312,31 @@
     <div id="header-placeholder"></div>
 
     <!-- CATALOG HERO & FILTERS -->
-    <section class="pt-32 pb-12 relative overflow-hidden">
+    <section class="pt-24 md:pt-32 pb-10 md:pb-12 relative overflow-hidden">
         <div class="absolute inset-0 bg-accent/5 -z-10"></div>
         <div class="container mx-auto px-6 relative z-10 w-full max-w-7xl">
-            <div class="mb-10">
-                <h1 class="text-4xl md:text-6xl font-black mb-6 uppercase tracking-tighter">
+            <!-- Mobile: title row with actions (sort/filter). Hides on scroll down, shows on scroll up. -->
+            <div id="gpu-mobile-toolbar" class="gpu-mobile-toolbar lg:hidden">
+                <div class="gpu-mobile-toolbar-inner">
+                    <div class="gpu-mobile-toolbar-title">
+                        Каталог <span class="text-accent">GPU</span>
+                    </div>
+                    <div class="gpu-mobile-toolbar-actions">
+                        <button type="button" id="gpu-mobile-sort-open" class="gpu-mobile-icon-btn" aria-label="Сортировка">
+                            <i class="fa-solid fa-arrow-down-wide-short"></i>
+                        </button>
+                        <button type="button" id="gpu-mobile-filter-open" class="gpu-mobile-icon-btn" aria-label="Фильтр">
+                            <i class="fa-solid fa-sliders"></i>
+                            <span id="gpu-mobile-badge" class="gpu-mobile-icon-badge">0</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mb-6 md:mb-10">
+                <h1 class="text-4xl md:text-6xl font-black uppercase tracking-tighter">
                     Каталог <span class="text-accent">ГПУ</span>
                 </h1>
-                <p class="text-lg text-slate-400 max-w-2xl leading-relaxed">
-                    Подбор газопоршневых установок по мощности, исполнению и цене.
-                </p>
             </div>
         </div>
     </section>
@@ -332,7 +347,7 @@
         <aside class="gpu-catalog-sidebar pb-10">
             <div class="gpu-catalog-sidebar-panel">
                 <div class="gpu-mobile-sheet">
-                    <div class="gpu-mobile-sheet-header px-4 py-3 flex items-center justify-between gap-3">
+                    <div class="gpu-mobile-sheet-header lg:hidden px-4 py-3 flex items-center justify-between gap-3">
                         <div class="text-xs font-black uppercase tracking-[0.22em] text-slate-900">
                             Фильтр и сортировка
                         </div>
@@ -713,22 +728,6 @@
                     </div>
 	            </div>
 	        </aside>
-
-            <!-- Mobile top toolbar -->
-            <div id="gpu-mobile-toolbar" class="gpu-mobile-toolbar lg:hidden">
-                <div class="gpu-mobile-toolbar-inner">
-                    <div class="gpu-mobile-toolbar-title">Каталог <span class="text-accent">GPU</span></div>
-                    <div class="gpu-mobile-toolbar-actions">
-                        <button type="button" id="gpu-mobile-sort-open" class="gpu-mobile-icon-btn" aria-label="Сортировка">
-                            <i class="fa-solid fa-arrow-down-wide-short"></i>
-                        </button>
-                        <button type="button" id="gpu-mobile-filter-open" class="gpu-mobile-icon-btn" aria-label="Фильтр">
-                            <i class="fa-solid fa-sliders"></i>
-                            <span id="gpu-mobile-badge" class="gpu-mobile-icon-badge">0</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
 
 	        <div id="gpu-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"></div>
 	    </main>
