--- a/catalog.html
+++ b/catalog.html
@@ -58,7 +58,7 @@
             }
         }
 
-        /* Mobile: filters/sort live in a modal, opened by a top toolbar. */
+        /* Mobile: filters/sort live in a modal, opened by header buttons. */
         @media (max-width: 1279px) {
             .gpu-catalog-sidebar {
                 display: none;
@@ -109,48 +109,6 @@
                 border-top-right-radius: 22px;
             }
 
-            .gpu-mobile-toolbar {
-                position: sticky;
-                top: 64px; /* under site header */
-                z-index: 1400;
-                margin: 0 0 10px 0;
-                transition: transform 220ms ease, opacity 220ms ease;
-            }
-
-            .gpu-mobile-toolbar.is-hidden {
-                opacity: 0;
-                transform: translateY(-14px);
-                pointer-events: none;
-            }
-
-            .gpu-mobile-toolbar-inner {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                gap: 12px;
-                padding: 0;
-                border-radius: 0;
-                background: transparent;
-                color: inherit;
-                border: 0;
-                box-shadow: none;
-            }
-
-            .gpu-mobile-toolbar-title {
-                font-weight: 900;
-                text-transform: uppercase;
-                letter-spacing: 0.08em;
-                font-size: 13px;
-                line-height: 1;
-                white-space: nowrap;
-            }
-
-            .gpu-mobile-toolbar-actions {
-                display: inline-flex;
-                align-items: center;
-                gap: 10px;
-            }
-
             .gpu-mobile-icon-btn {
                 position: relative;
                 width: 44px;
@@ -186,11 +144,22 @@
             }
         }
 
+        /* Never show the modal header inside the desktop sidebar. */
+        .gpu-mobile-sheet-header {
+            display: none;
+        }
+
+        @media (max-width: 1279px) {
+            body.gpu-mobile-filters-open .gpu-mobile-sheet-header {
+                display: flex;
+            }
+        }
+
         /* Make the sidebar panel feel closer to the page background (less "cardy"). */
         .gpu-catalog-sidebar-panel .glass-card {
             background: transparent;
             border-color: transparent;
-	            box-shadow: none;
+            box-shadow: none;
 	            backdrop-filter: none;
 	            -webkit-backdrop-filter: none;
 	            transition: none;
@@ -315,28 +284,24 @@
     <section class="pt-24 md:pt-32 pb-10 md:pb-12 relative overflow-hidden">
         <div class="absolute inset-0 bg-accent/5 -z-10"></div>
         <div class="container mx-auto px-6 relative z-10 w-full max-w-7xl">
-            <!-- Mobile: title row with actions (sort/filter). Hides on scroll down, shows on scroll up. -->
-            <div id="gpu-mobile-toolbar" class="gpu-mobile-toolbar lg:hidden">
-                <div class="gpu-mobile-toolbar-inner">
-                    <div class="gpu-mobile-toolbar-title">
-                        Каталог <span class="text-accent">GPU</span>
-                    </div>
-                    <div class="gpu-mobile-toolbar-actions">
-                        <button type="button" id="gpu-mobile-sort-open" class="gpu-mobile-icon-btn" aria-label="Сортировка">
+            <div class="mb-6 md:mb-10">
+                <div class="flex items-start justify-between gap-4">
+                    <h1 class="text-4xl md:text-6xl font-black uppercase tracking-tighter">
+                        Каталог <span class="text-accent">ГПУ</span>
+                    </h1>
+
+                    <div class="lg:hidden flex items-center gap-2 pt-1">
+                        <button type="button" id="gpu-mobile-sort-open" class="gpu-mobile-icon-btn"
+                            aria-label="Сортировка">
                             <i class="fa-solid fa-arrow-down-wide-short"></i>
                         </button>
-                        <button type="button" id="gpu-mobile-filter-open" class="gpu-mobile-icon-btn" aria-label="Фильтр">
+                        <button type="button" id="gpu-mobile-filter-open" class="gpu-mobile-icon-btn"
+                            aria-label="Фильтр">
                             <i class="fa-solid fa-sliders"></i>
                             <span id="gpu-mobile-badge" class="gpu-mobile-icon-badge">0</span>
                         </button>
                     </div>
                 </div>
-            </div>
-
-            <div class="mb-6 md:mb-10">
-                <h1 class="text-4xl md:text-6xl font-black uppercase tracking-tighter">
-                    Каталог <span class="text-accent">ГПУ</span>
-                </h1>
             </div>
         </div>
     </section>
@@ -347,7 +312,7 @@
         <aside class="gpu-catalog-sidebar pb-10">
             <div class="gpu-catalog-sidebar-panel">
                 <div class="gpu-mobile-sheet">
-                    <div class="gpu-mobile-sheet-header lg:hidden px-4 py-3 flex items-center justify-between gap-3">
+                    <div class="gpu-mobile-sheet-header px-4 py-3 flex items-center justify-between gap-3">
                         <div class="text-xs font-black uppercase tracking-[0.22em] text-slate-900">
                             Фильтр и сортировка
                         </div>
