Обновить мобильное меню отраслей

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
 	    <!-- HERO -->
 		    <section class="hero-bg min-h-screen flex items-center pt-20 pb-20">
 			        <div class="max-w-7xl mx-auto px-6 w-full">
-	                <div
-	                    class="mb-6 inline-flex items-center gap-3 bg-white/5 border border-white/10 px-4 py-2 rounded-full">
+		                <div
+		                    class="hero-badge mb-6 inline-flex items-center gap-3 bg-white/5 border border-white/10 px-4 py-2 rounded-full">
                     <span class="flex h-2 w-2 relative">
                         <span
                             class="animate-ping absolute inline-flex h-full w-full rounded-full bg-accent opacity-75"></span>
                         <span class="relative inline-flex rounded-full h-2 w-2 bg-accent"></span>
                     </span>
-                    <span class="text-xs font-bold uppercase tracking-[0.2em] text-slate-300">Локализация производства
-                        80% (СТ-1)</span>
-                </div>
+	                    <span class="hero-badge-text text-xs font-bold uppercase tracking-[0.2em] text-slate-300">Локализация производства
+	                        80% (СТ-1)</span>
+	                </div>
 
                 <h1 class="text-5xl md:text-8xl font-black mb-8 leading-[1] uppercase tracking-tighter">
                     Газопоршневые <br>установки <span class="text-accent">ЭЛЕМЕНТ</span>
@@ -59,17 +59,17 @@
 
                 <div class="grid grid-cols-2 md:grid-cols-3 gap-y-8 gap-x-12 mb-12">
                     <div class="flex flex-col">
-                        <span id="price-counter" class="text-accent text-3xl font-black mb-1">от 6,0 ₽</span>
+                        <span id="price-counter" class="text-white text-3xl font-black mb-1">от 6,0 ₽</span>
                         <span class="text-slate-500 text-sm font-bold tracking-widest leading-tight">Цена
                             электроэнергии<br> за 1 кВт·ч при цене газа 9,6 ₽</span>
                     </div>
                     <div class="flex flex-col">
-                        <span id="gas-counter" class="text-accent text-3xl font-black mb-1">от 0,32 м³</span>
+                        <span id="gas-counter" class="text-white text-3xl font-black mb-1">от 0,32 м³</span>
                         <span class="text-slate-500 text-sm font-bold tracking-widest leading-tight">Потребление
                             газа<br> на 1 кВт·ч</span>
                     </div>
                     <div class="flex flex-col">
-                        <span id="uptime-counter" class="text-accent text-3xl font-black mb-1">80% Аптайм</span>
+                        <span id="uptime-counter" class="text-white text-3xl font-black mb-1">80% Аптайм</span>
                         <span class="text-slate-500 text-sm font-bold tracking-widest leading-tight">Время работы
                             ГПУ</span>
                     </div>
