Adjust projects layout and content

--- a/projects-case-2025-12gpus-250kw.html
+++ b/projects-case-2025-12gpus-250kw.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Установлено 12 агрегатов, суммарно 3,0 МВт установленной мощности." />
+    <meta name="description" content="Поставка ГПУ, интеграция в инфраструктуру объекта, настройка автоматики, параллельной работы и защит, выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию." />
     <title>Энергоцентр: 12 ГПУ по 250 кВт | Проекты | Элемент Энергия</title>
 
     <script>
@@ -66,9 +66,16 @@
 
           <div class="lg:col-span-5 flex flex-col gap-8">
             <div class="glass-card p-10">
+              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Описание проекта</div>
+              <div class="mt-4 text-sm text-slate-600 leading-relaxed">
+                Поставка ГПУ, интеграция в инфраструктуру объекта, настройка автоматики, параллельной работы и защит, выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.
+              </div>
+            </div>
+
+            <div class="glass-card p-10">
               <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
               <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
-                <div><span class="text-slate-500">Мощность:</span> 3,0 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 250 кВт × 12</div><div><span class="text-slate-500">Регион:</span> Московская область</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div>
+                <div><span class="text-slate-500">Мощность:</span> 3,0 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 250 кВт × 12</div><div><span class="text-slate-500">Регион:</span> Московская область</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div><div><span class="text-slate-500">Сумма договора:</span> 85 000 000,00 ₽</div>
               </div>
             </div>
 
