--- a/projects-case-2025-1gpu-250kw-container-chelyabinsk.html
+++ b/projects-case-2025-1gpu-250kw-container-chelyabinsk.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Поставка и запуск 1 агрегата (0,25 МВт) в контейнерном исполнении." />
+    <meta name="description" content="Поставка ГПУ в контейнерном исполнении и выполнение пусконаладочных работ (ПНР). Настройка автоматики и ввод в эксплуатацию." />
     <title>Контейнер: 1 ГПУ по 250 кВт (поставка и ПНР) | Проекты | Элемент Энергия</title>
 
     <script>
@@ -66,9 +66,16 @@
 
           <div class="lg:col-span-5 flex flex-col gap-8">
             <div class="glass-card p-10">
+              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Описание проекта</div>
+              <div class="mt-4 text-sm text-slate-600 leading-relaxed">
+                Поставка ГПУ в контейнерном исполнении и выполнение пусконаладочных работ (ПНР). Настройка автоматики и ввод в эксплуатацию.
+              </div>
+            </div>
+
+            <div class="glass-card p-10">
               <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
               <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
-                <div><span class="text-slate-500">Мощность:</span> 0,25 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 250 кВт × 1</div><div><span class="text-slate-500">Регион:</span> Челябинская область</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div>
+                <div><span class="text-slate-500">Мощность:</span> 0,25 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 250 кВт × 1</div><div><span class="text-slate-500">Регион:</span> Челябинская область</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div><div><span class="text-slate-500">Сумма договора:</span> 6 500 000,00 ₽</div>
               </div>
             </div>
 
