--- a/projects-case-2024-2x400kw-2x250kw-ut-heat.html
+++ b/projects-case-2024-2x400kw-2x250kw-ut-heat.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Поставка и запуск комплекса, суммарно 1,3 МВт установленной мощности." />
+    <meta name="description" content="Поставка оборудования на раме с системой утилизации тепла. Интеграция, настройка автоматики и защит. Выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию." />
     <title>Энергоцентр: 2×400 кВт + 2×250 кВт (утилизация тепла) | Проекты | Элемент Энергия</title>
 
     <script>
@@ -66,9 +66,16 @@
 
           <div class="lg:col-span-5 flex flex-col gap-8">
             <div class="glass-card p-10">
+              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Описание проекта</div>
+              <div class="mt-4 text-sm text-slate-600 leading-relaxed">
+                Поставка оборудования на раме с системой утилизации тепла. Интеграция, настройка автоматики и защит. Выполнение пусконаладочных работ (ПНР) и ввод в эксплуатацию.
+              </div>
+            </div>
+
+            <div class="glass-card p-10">
               <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
               <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
-                <div><span class="text-slate-500">Мощность:</span> 1,3 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 400 кВт × 2; ГПУ 250 кВт × 2</div><div><span class="text-slate-500">Регион:</span> Республика Марий Эл</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div>
+                <div><span class="text-slate-500">Мощность:</span> 1,3 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 400 кВт × 2; ГПУ 250 кВт × 2</div><div><span class="text-slate-500">Регион:</span> Республика Марий Эл</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div><div><span class="text-slate-500">Сумма договора:</span> 39 157 200,00 ₽</div>
               </div>
             </div>
 
