--- a/projects-case-2024-5gpus-180kw-container.html
+++ b/projects-case-2024-5gpus-180kw-container.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Установлено 5 агрегатов (0,9 МВт) в контейнерном исполнении." />
+    <meta name="description" content="Поставка контейнерного решения с настройкой параллельной работы, интеграцией систем утилизации тепла, выполнением ПНР и вводом в эксплуатацию." />
     <title>Энергоцентр: 5 ГПУ по 180 кВт (контейнер) | Проекты | Элемент Энергия</title>
 
     <script>
@@ -66,9 +66,16 @@
 
           <div class="lg:col-span-5 flex flex-col gap-8">
             <div class="glass-card p-10">
+              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Описание проекта</div>
+              <div class="mt-4 text-sm text-slate-600 leading-relaxed">
+                Поставка контейнерного решения с настройкой параллельной работы, интеграцией систем утилизации тепла, выполнением ПНР и вводом в эксплуатацию.
+              </div>
+            </div>
+
+            <div class="glass-card p-10">
               <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
               <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
-                <div><span class="text-slate-500">Мощность:</span> 0,9 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 180 кВт × 5</div><div><span class="text-slate-500">Регион:</span> Санкт-Петербург</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div>
+                <div><span class="text-slate-500">Мощность:</span> 0,9 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 180 кВт × 5</div><div><span class="text-slate-500">Регион:</span> Санкт-Петербург</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div><div><span class="text-slate-500">Сумма договора:</span> 39 430 000,00 ₽</div>
               </div>
             </div>
 
