--- a/projects-case-2025-10gpus-250kw-ut-heat.html
+++ b/projects-case-2025-10gpus-250kw-ut-heat.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Поставка и ввод в эксплуатацию 10 агрегатов (2,5 МВт)." />
+    <meta name="description" content="Поставка и интеграция энергоустановок с системой утилизации тепла. Настройка автоматики, режимов работы и защит. Пусконаладочные работы (ПНР) и ввод в эксплуатацию." />
     <title>Энергоцентр: 10 ГПУ по 250 кВт (утилизация тепла) | Проекты | Элемент Энергия</title>
 
     <script>
@@ -60,9 +60,16 @@
 
           <div class="lg:col-span-5 flex flex-col gap-8">
             <div class="glass-card p-10">
+              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Описание проекта</div>
+              <div class="mt-4 text-sm text-slate-600 leading-relaxed">
+                Поставка и интеграция энергоустановок с системой утилизации тепла. Настройка автоматики, режимов работы и защит. Пусконаладочные работы (ПНР) и ввод в эксплуатацию.
+              </div>
+            </div>
+
+            <div class="glass-card p-10">
               <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
               <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
-                <div><span class="text-slate-500">Мощность:</span> 2,5 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 250 кВт × 10</div><div><span class="text-slate-500">Регион:</span> Самарская область</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div>
+                <div><span class="text-slate-500">Мощность:</span> 2,5 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 250 кВт × 10</div><div><span class="text-slate-500">Регион:</span> Самарская область</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div><div><span class="text-slate-500">Сумма договора:</span> 68 200 000,00 ₽</div>
               </div>
             </div>
 
