--- a/projects-case-2025-6gpus-250kw-kirov.html
+++ b/projects-case-2025-6gpus-250kw-kirov.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Поставка и ввод в эксплуатацию 6 агрегатов (1,5 МВт)." />
+    <meta name="description" content="Поставка ГПУ, монтажная интеграция и пусконаладочные работы (ПНР). Настройка автоматики и защит, ввод в эксплуатацию." />
     <title>Энергоцентр: 6 ГПУ по 250 кВт (поставка и ПНР) | Проекты | Элемент Энергия</title>
 
     <script>
@@ -66,9 +66,16 @@
 
           <div class="lg:col-span-5 flex flex-col gap-8">
             <div class="glass-card p-10">
+              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Описание проекта</div>
+              <div class="mt-4 text-sm text-slate-600 leading-relaxed">
+                Поставка ГПУ, монтажная интеграция и пусконаладочные работы (ПНР). Настройка автоматики и защит, ввод в эксплуатацию.
+              </div>
+            </div>
+
+            <div class="glass-card p-10">
               <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
               <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
-                <div><span class="text-slate-500">Мощность:</span> 1,5 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 250 кВт × 6</div><div><span class="text-slate-500">Регион:</span> Кировская область</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div>
+                <div><span class="text-slate-500">Мощность:</span> 1,5 МВт</div><div><span class="text-slate-500">Агрегаты:</span> ГПУ 250 кВт × 6</div><div><span class="text-slate-500">Регион:</span> Кировская область</div><div><span class="text-slate-500">Отрасль:</span> Промышленность</div><div><span class="text-slate-500">Сумма договора:</span> 38 144 000,00 ₽</div>
               </div>
             </div>
 
