--- a/projects-fast-mine-5mw.html
+++ b/projects-fast-mine-5mw.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Ввод в эксплуатацию и обслуживание объекта под режим 24/7." />
+    <meta name="description" content="Частичная поставка оборудования, доработка клиентских ГПУ под условия эксплуатации, пусконаладочные работы (ПНР) и сервисное обслуживание. Настройка режимов работы и регламентов эксплуатации под нагрузку 24/7." />
     <title>Энергоцентр для майнинга 5 МВт | Проекты | Элемент Энергия</title>
 
     <script>
@@ -65,6 +65,13 @@
           </div>
 
           <div class="lg:col-span-5 flex flex-col gap-8">
+            <div class="glass-card p-10">
+              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Описание проекта</div>
+              <div class="mt-4 text-sm text-slate-600 leading-relaxed">
+                Частичная поставка оборудования, доработка клиентских ГПУ под условия эксплуатации, пусконаладочные работы (ПНР) и сервисное обслуживание. Настройка режимов работы и регламентов эксплуатации под нагрузку 24/7.
+              </div>
+            </div>
+
             <div class="glass-card p-10">
               <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
               <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
