--- a/projects-mining-site-3mw.html
+++ b/projects-mining-site-3mw.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Подготовлена инфраструктура под установку ГПУ и запуск объекта." />
+    <meta name="description" content="Подготовка площадки под размещение ГПУ, получение ТУ на газ, поставка оборудования и интеграция в инфраструктуру объекта. Обеспечение готовности к вводу в эксплуатацию." />
     <title>Площадка для майнинга 3 МВт | Проекты | Элемент Энергия</title>
 
     <script>
@@ -65,6 +65,13 @@
           </div>
 
           <div class="lg:col-span-5 flex flex-col gap-8">
+            <div class="glass-card p-10">
+              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Описание проекта</div>
+              <div class="mt-4 text-sm text-slate-600 leading-relaxed">
+                Подготовка площадки под размещение ГПУ, получение ТУ на газ, поставка оборудования и интеграция в инфраструктуру объекта. Обеспечение готовности к вводу в эксплуатацию.
+              </div>
+            </div>
+
             <div class="glass-card p-10">
               <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
               <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
