--- a/projects-saratov-energycenter-7mw.html
+++ b/projects-saratov-energycenter-7mw.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Пусконаладка и сопровождение эксплуатации энергоцентра." />
+    <meta name="description" content="Доработка и адаптация оборудования под условия объекта, пусконаладочные работы (ПНР), настройка автоматики и режимов работы, а также сервисное сопровождение эксплуатации." />
     <title>Энергоцентр Саратов 7 МВт | Проекты | Элемент Энергия</title>
 
     <script>
@@ -65,6 +65,13 @@
           </div>
 
           <div class="lg:col-span-5 flex flex-col gap-8">
+            <div class="glass-card p-10">
+              <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Описание проекта</div>
+              <div class="mt-4 text-sm text-slate-600 leading-relaxed">
+                Доработка и адаптация оборудования под условия объекта, пусконаладочные работы (ПНР), настройка автоматики и режимов работы, а также сервисное сопровождение эксплуатации.
+              </div>
+            </div>
+
             <div class="glass-card p-10">
               <div class="text-[11px] font-black uppercase tracking-[0.22em] text-slate-500">Параметры</div>
               <div class="mt-4 space-y-2 text-sm text-slate-600 leading-relaxed">
